src/test/ui/privacy/privacy-ns1.stderr
error[E0423]: expected function, found trait `Bar`
  --> $DIR/privacy-ns1.rs:20:5
   |
LL |     Bar();
   |     ^^^
help: a unit struct with a similar name exists
   |
LL |     Baz();
   |     ^^^
help: possible better candidates are found in other modules, you can import them into scope
   |
LL | use foo1::Bar;
   |
LL | use foo2::Bar;
   |
LL | use foo3::Bar;
   |

error[E0573]: expected type, found function `Bar`
  --> $DIR/privacy-ns1.rs:35:17
   |
LL |     let _x: Box<Bar>;
   |                 ^^^
help: a struct with a similar name exists
   |
LL |     let _x: Box<Baz>;
   |                 ^^^
help: possible better candidates are found in other modules, you can import them into scope
   |
LL | use foo1::Bar;
   |
LL | use foo2::Bar;
   |
LL | use foo3::Bar;
   |

error[E0425]: cannot find function `Bar` in this scope
  --> $DIR/privacy-ns1.rs:50:5
   |
LL |     Bar();
   |     ^^^
help: a unit struct with a similar name exists
   |
LL |     Baz();
   |     ^^^
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use foo1::Bar;
   |
LL | use foo2::Bar;
   |
LL | use foo3::Bar;
   |

error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/privacy-ns1.rs:51:17
   |
LL |     let _x: Box<Bar>;
   |                 ^^^
help: a struct with a similar name exists
   |
LL |     let _x: Box<Baz>;
   |                 ^^^
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use foo1::Bar;
   |
LL | use foo2::Bar;
   |
LL | use foo3::Bar;
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0423, E0425.
For more information about an error, try `rustc --explain E0412`.
